Update non-major netty dependencies to v4.2.6.Final (master) (#585)
* Update non-major netty dependencies to v4.2.6.Final

* Install Java 11 and 21 in GitHub workflows

* Fix linter warning in TlsUtil

* Fix warnings in system tests

* Clean up unit tests

* Update graalvm-native to 0.11.0

* Disable JFR for native image build

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: David Sondermann <david.sondermann@hivemq.com>