@@ -53,9 +53,7 @@ class TestBrokerConnectTlsST {
             .build();
 
     @RegisterExtension
-    @SuppressWarnings("JUnitMalformedDeclaration")
     private final @NotNull MqttCliAsyncExtension mqttCli = new MqttCliAsyncExtension();
-
 
     //TRUSTSTORE
 
@@ -87,7 +85,7 @@ class TestBrokerConnectTlsST {
         executionResult.write("clientTruststorePassword");
         executionResult.awaitStdOut("MQTT " + mqttVersion + ": OK");
 
-        assertTestConnectPacket(hivemq.getConnectPackets().get(0),
+        assertTestConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -120,7 +118,7 @@ class TestBrokerConnectTlsST {
         final ExecutionResultAsync executionResult = mqttCli.executeAsync(testCommand);
         executionResult.awaitStdOut("MQTT " + mqttVersion + ": OK");
 
-        assertTestConnectPacket(hivemq.getConnectPackets().get(0),
+        assertTestConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -157,7 +155,7 @@ class TestBrokerConnectTlsST {
         final ExecutionResultAsync executionResult = mqttCli.executeAsync(testCommand, Map.of(), properties);
         executionResult.awaitStdOut("MQTT " + mqttVersion + ": OK");
 
-        assertTestConnectPacket(hivemq.getConnectPackets().get(0),
+        assertTestConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -188,7 +186,7 @@ class TestBrokerConnectTlsST {
         final ExecutionResultAsync executionResult = mqttCli.executeAsync(testCommand);
         executionResult.awaitStdOut("MQTT " + mqttVersion + ": OK");
 
-        assertTestConnectPacket(hivemq.getConnectPackets().get(0),
+        assertTestConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -216,7 +214,7 @@ class TestBrokerConnectTlsST {
         final ExecutionResultAsync executionResult = mqttCli.executeAsync(testCommand);
         executionResult.awaitStdOut("MQTT " + mqttVersion + ": OK");
 
-        assertTestConnectPacket(hivemq.getConnectPackets().get(0),
+        assertTestConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -244,7 +242,7 @@ class TestBrokerConnectTlsST {
         final ExecutionResultAsync executionResult = mqttCli.executeAsync(testCommand, Map.of(), properties);
         executionResult.awaitStdOut("MQTT " + mqttVersion + ": OK");
 
-        assertTestConnectPacket(hivemq.getConnectPackets().get(0),
+        assertTestConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -275,7 +273,7 @@ class TestBrokerConnectTlsST {
         final ExecutionResultAsync executionResult = mqttCli.executeAsync(testCommand);
         executionResult.awaitStdOut("MQTT " + mqttVersion + ": OK");
 
-        assertTestConnectPacket(hivemq.getConnectPackets().get(0),
+        assertTestConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -303,7 +301,7 @@ class TestBrokerConnectTlsST {
         final ExecutionResultAsync executionResult = mqttCli.executeAsync(testCommand);
         executionResult.awaitStdOut("MQTT " + mqttVersion + ": OK");
 
-        assertTestConnectPacket(hivemq.getConnectPackets().get(0),
+        assertTestConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -331,7 +329,7 @@ class TestBrokerConnectTlsST {
         final ExecutionResultAsync executionResult = mqttCli.executeAsync(testCommand, Map.of(), properties);
         executionResult.awaitStdOut("MQTT " + mqttVersion + ": OK");
 
-        assertTestConnectPacket(hivemq.getConnectPackets().get(0),
+        assertTestConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
