@@ -47,9 +47,7 @@ class ShellConnectTlsST {
             .build();
 
     @RegisterExtension
-    @SuppressWarnings("JUnitMalformedDeclaration")
     private final @NotNull MqttCliShellExtension mqttCliShell = new MqttCliShellExtension();
-
 
     //TRUSTSTORE
 
@@ -85,7 +83,7 @@ class ShellConnectTlsST {
         awaitOutput.awaitLog("sending CONNECT");
         awaitOutput.awaitLog("received CONNACK");
 
-        assertConnectPacket(hivemq.getConnectPackets().get(0),
+        assertConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -122,7 +120,7 @@ class ShellConnectTlsST {
         awaitOutput.awaitLog("sending CONNECT");
         awaitOutput.awaitLog("received CONNACK");
 
-        assertConnectPacket(hivemq.getConnectPackets().get(0),
+        assertConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -154,7 +152,7 @@ class ShellConnectTlsST {
 
         mqttCliShell.executeAsync(connectCommand).awaitLog("sending CONNECT").awaitLog("received CONNACK");
 
-        assertConnectPacket(hivemq.getConnectPackets().get(0),
+        assertConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -164,7 +162,8 @@ class ShellConnectTlsST {
     void test_tls_pem_format_via_folder(
             @CartesianTest.Values(chars = {'3', '5'}) final char mqttVersion,
             @CartesianTest.Enum final @NotNull TlsVersion tlsVersion) throws Exception {
-        final String certificateAuthorityPublicKey = Resources.getResource("tls/certificateAuthority/capath/pem").getPath();
+        final String certificateAuthorityPublicKey =
+                Resources.getResource("tls/certificateAuthority/capath/pem").getPath();
 
         final List<String> connectCommand = List.of("con",
                 "-h",
@@ -183,7 +182,7 @@ class ShellConnectTlsST {
 
         mqttCliShell.executeAsync(connectCommand).awaitLog("sending CONNECT").awaitLog("received CONNACK");
 
-        assertConnectPacket(hivemq.getConnectPackets().get(0),
+        assertConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -215,7 +214,7 @@ class ShellConnectTlsST {
 
         mqttCliShell.executeAsync(connectCommand).awaitLog("sending CONNECT").awaitLog("received CONNACK");
 
-        assertConnectPacket(hivemq.getConnectPackets().get(0),
+        assertConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
@@ -225,7 +224,8 @@ class ShellConnectTlsST {
     void test_tls_der_format_via_folder(
             @CartesianTest.Values(chars = {'3', '5'}) final char mqttVersion,
             @CartesianTest.Enum final @NotNull TlsVersion tlsVersion) throws Exception {
-        final String certificateAuthorityPublicKey = Resources.getResource("tls/certificateAuthority/capath/der").getPath();
+        final String certificateAuthorityPublicKey =
+                Resources.getResource("tls/certificateAuthority/capath/der").getPath();
 
         final List<String> connectCommand = List.of("con",
                 "-h",
@@ -244,7 +244,7 @@ class ShellConnectTlsST {
 
         mqttCliShell.executeAsync(connectCommand).awaitLog("sending CONNECT").awaitLog("received CONNACK");
 
-        assertConnectPacket(hivemq.getConnectPackets().get(0),
+        assertConnectPacket(hivemq.getConnectPackets().getFirst(),
                 connectAssertion -> connectAssertion.setMqttVersion(MqttVersionConverter.toExtensionSdkVersion(
                         mqttVersion)));
     }
